# opencv-real-time-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run.py  run_image.py  run_webcam.py
src/rtcv/: app.py  cli.py  detector.py  dnn_detector.py  eye_detector.py  eyes.py  fps.py  pipeline.py  tracker.py  utils.py  yolo_onnx.py
