[project]
name = "opencv-real-time-detection"
version = "1.0.0"
description = "Real-time OpenCV face detection with bounding boxes, FPS, and screenshot/video outputs."
requires-python = ">=3.10"
dependencies = ["opencv-python", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

